# masters-thesis-materials

./: .env.example  .gitignore  AGENTS.md  README.md  REVALIDATE.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
configs/: tuning_config.json
results/: README.md
results/comparison/: README.md
results/detector_combinations/: README.md
results/tuning/: README.md
results/validation/: README.md  eif_mh5_smoke_tuning_20260326_225925.csv  eif_mh5_smoke_tuning_20260326_230349.csv  iforest_mh5_smoke_tuning_20260326_225208.csv  iforest_mh5_smoke_tuning_20260326_225223.csv  iforest_mh5_smoke_tuning_20260326_225327.csv  rrcf_mh5_smoke_tuning_20260326_231247.csv  rrcf_mh5_smoke_tuning_20260326_232307.csv
src/: __init__.py  config.py  constants.py  tuning_config.py
src/anomaly/: Z_SCORE_README.md  __init__.py  base.py  batch_processor.py  change_tracker.py  classifier.py  combined.py  combined_variants.py  confidence.py  (+3 more)
tests/: test_all_competitors_country_level_layered_finalists.py  test_eif_official_alignment.py  test_evaluation_cache_behavior.py  test_evaluation_history_dependent_detectors.py  test_extract_if_zscore_layered_thesis_metrics.py  test_history_subsets.py  test_if_zscore_layered_combinations.py  test_initial_zscore_test_run.py  test_isolation_forest_training_and_tuning.py  test_phase1_prepare_data.py  test_phase2_artifacts.py  test_precompute_tree_feature_cache.py  test_split_training_data.py  test_statistical_zscore_variants.py  test_synthetic_injection.py  test_threshold_detector_batch.py  test_tree_ml_detectors.py  test_tune_forests_sweep.py  test_tune_statistical_sweep.py  test_validate_eif_mh5_smoke.py  test_validate_iforest_mh5_smoke.py  test_validate_rrcf_mh5_smoke.py  test_z_score_methods.py
(+16136 files in other folders)
