[project]
name = "competitor-data-refinery-training"
version = "0.1.0"
description = "Standalone training and evaluation subset for reproducing thesis anomaly-detection results"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv==1.0.1",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "pyarrow==18.1.0",
    "scikit-learn==1.6.1",
    "sentence-transformers==3.4.1",
    "torch==2.9.1",
    "psutil==6.1.1",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "ruff==0.8.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "mypy==1.13.0",
    "types-python-dateutil==2.9.0.20241206",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Google Python Style Guide rules
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "D",      # pydocstyle (docstrings)
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "D100",   # Missing docstring in public module (too noisy initially)
    "D104",   # Missing docstring in public package
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
